Details
-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0
-
None
-
3
-
9223372036854775807
Description
While building Ubuntu 24.04 on master branch, it failed as follows:
CC [M] /root/lustre-release/lnet/lnet/api-ni.o /root/lustre-release/lnet/lnet/api-ni.c:2929:1: error: no previous prototype for 'nla_strnid' [-Werror=missing-prototypes] 2929 | nla_strnid(struct nlattr **attr, struct lnet_nid *nid, int *rem, | ^~~~~~~~~~ /root/lustre-release/lnet/lnet/api-ni.c:9297:5: error: no previous prototype for 'lnet_fault_show_done' [-Werror=missing-prototypes] 9297 | int lnet_fault_show_done(struct netlink_callback *cb) | ^~~~~~~~~~~~~~~~~~~~ /root/lustre-release/lnet/lnet/api-ni.c:9311:5: error: no previous prototype for 'lnet_fault_show_start' [-Werror=missing-prototypes] 9311 | int lnet_fault_show_start(struct netlink_callback *cb) | ^~~~~~~~~~~~~~~~~~~~~ /root/lustre-release/lnet/lnet/api-ni.c:9459:5: error: no previous prototype for 'lnet_fault_show_dump' [-Werror=missing-prototypes] 9459 | int lnet_fault_show_dump(struct sk_buff *msg, struct netlink_callback *cb) | ^~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
The issue was introduced by the following commit:
commit f1c66236c6869a83f57d07206d845bba42d7cd9f Author: Chris Horn <chris.horn@hpe.com> AuthorDate: Sun Jun 16 09:28:20 2024 -0400 Commit: Oleg Drokin <green@whamcloud.com> CommitDate: Tue Jun 25 03:23:40 2024 +0000 LU-10391 lnet: Fault injection add/del ioctls to netlink Convert the fault injection add/del ioctls to a netlink implementaiton. Test-Parameters: trivial testlist=sanity-lnet Signed-off-by: Chris Horn <chris.horn@hpe.com> Change-Id: I20f38d4e7c0215a1b19772c6253c617174c0b00c Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/53732 Tested-by: jenkins <devops@whamcloud.com> Tested-by: Maloo <maloo@whamcloud.com> Reviewed-by: Serguei Smirnov <ssmirnov@whamcloud.com> Reviewed-by: James Simmons <jsimmons@infradead.org> Reviewed-by: Oleg Drokin <green@whamcloud.com>
Merged for 2.16